--- a/package.json
+++ b/package.json
@@ -9,10 +9,54 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^7.6.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/material-bottom-tabs": "^6.2.19",
+    "@react-navigation/material-top-tabs": "^6.6.5",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
+    "@sendgrid/mail": "^8.1.1",
+    "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
+    "expo": "~50.0.14",
+    "expo-sqlite": "^13.4.0",
     "expo-status-bar": "~1.11.1",
+    "express": "^4.18.2",
+    "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
+    "lodash-es": "^4.17.21",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
+    "nodemailer": "^6.9.12",
+    "randomstring": "^1.3.0",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "^0.73.6",
+    "react-native-calendar-strip": "^2.2.6",
+    "react-native-calendars": "^1.1304.0",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-elements": "^3.4.3",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-gesture-handler": "^2.14.1",
+    "react-native-mail": "^6.1.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.12.2",
+    "react-native-picker-select": "^9.0.0",
+    "react-native-qrcode-svg": "^6.3.0",
+    "react-native-reanimated": "^3.6.2",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-native-svg": "^14.1.0",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
